added message in html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <i class="fa-solid fa-meteor"></i>
+    
+    <h1>How you doing ?</h1>
     <!-- Script -->
     <script src="script.js"> </script>
 </body>
